--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Main Card -->
     <div class="main-container">
-        <h1 class="question">Will you be my Valentine?</h1>
+        <h1 class="question">Will you be my Valentine Ms Radhika?</h1>
         <div class="buttons">
             <button id="yesBtn" class="btn yes">Yes 💖</button>
             <button id="noBtn" class="btn no">No 💔</button>
@@ -35,3 +35,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
